Shows correct answers now after submit

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <p id="points"></p>
 
       <p class="question"><span id="q1Response" class="response"></span> 1. What is an advantage of using DOM level 2 event listeners versus traditional DOM event handlers?</p>
-      <p><input type="radio" name="q1" id="q1A" /> Traditional event handlers are an outdated method that requires placing JavaScript code directly into the HTML document.</p>
-      <p><input type="radio" name="q1" id="q1B" /> Traditional event handlers are not able to specify the new HTML5 events.</p>
-      <p><input type="radio" name="q1" id="q1C" /> Traditional event handlers can only attach one function to each event.</p>
-      <p><input type="radio" name="q1" id="q1D" /> Traditional event handlers require more lines of code to write, which slows down the processing of the script.</p>
+      <p><input type="radio" name="q1" id="q1A" />Traditional event handlers are an outdated method that requires placing JavaScript code directly into the HTML document.</p>
+      <p><input type="radio" name="q1" id="q1B" />Traditional event handlers are not able to specify the new HTML5 events.</p>
+      <p><input type="radio" name="q1" id="q1C" />Traditional event handlers can only attach one function to each event.</p>
+      <p><input type="radio" name="q1" id="q1D" />Traditional event handlers require more lines of code to write, which slows down the processing of the script.</p>
 
       <p class="question"><span id="q2Response" class="response"></span> 2. When invoking the addEventListener method, the third parameter is a Boolean. What happens when the Boolean is set to false?</p>
-      <p><input type="radio" name="q2" id="q2A" /> Event bubbling will occur: event flow starts from the most specific node and flows outward to the least specific node.</p>
-      <p><input type="radio" name="q2" id="q2B" /> Event capturing will occur: events flow inward from the lease specific node to the most specific node.</p>
-      <p><input type="radio" name="q2" id="q2C" /> Event bubbling will occur: events flow inward from the least specific node to the most specific node.</p>
-      <p><input type="radio" name="q2" id="q2D" /> Event capturing will occur: event flow starts from the most specific node and flows outward to the least specific node.</p>
+      <p><input type="radio" name="q2" id="q2A" />Event bubbling will occur: event flow starts from the most specific node and flows outward to the least specific node.</p>
+      <p><input type="radio" name="q2" id="q2B" />Event capturing will occur: events flow inward from the least specific node to the most specific node.</p>
+      <p><input type="radio" name="q2" id="q2C" />Event bubbling will occur: events flow inward from the least specific node to the most specific node.</p>
+      <p><input type="radio" name="q2" id="q2D" />Event capturing will occur: event flow starts from the most specific node and flows outward to the least specific node.</p>
 
       <p class="question"><span id="q3Response" class="response"></span> 3. When adding an event listener, you can use an _________ function when you need to pass in parameters to the function to be invoked.</p>
       <p><input id="q3Input" type="text" /></p>
@@ -32,12 +32,12 @@
       <p><input id="q4Input" type="text" /></p>
 
       <p class="question"><span id="q5Response" class="response"></span> 5. What are some benefits of event delegation? Check all that apply.</p>
-      <p><input type="checkbox" name="q5" id="q5A" /> It allows script to function correctly in older browsers.</p>
-      <p><input type="checkbox" name="q5" id="q5B" /> It simplifies code.</p>
-      <p><input type="checkbox" name="q5" id="q5C" /> It saves memory.</p>
-      <p><input type="checkbox" name="q5" id="q5D" /> It ties DOM events to corresponding BOM events.</p>
-      <p><input type="checkbox" name="q5" id="q5E" /> It can work with new elements that are added via script.</p>
-      <p><input type="checkbox" name="q5" id="q5F" /> It bypasses limitations of the "this" keyword.</p>
+      <p><input type="checkbox" name="q5" id="q5A" />It allows script to function correctly in older browsers.</p>
+      <p><input type="checkbox" name="q5" id="q5B" />It simplifies code.</p>
+      <p><input type="checkbox" name="q5" id="q5C" />It saves memory.</p>
+      <p><input type="checkbox" name="q5" id="q5D" />It ties DOM events to corresponding BOM events.</p>
+      <p><input type="checkbox" name="q5" id="q5E" />It can work with new elements that are added via script.</p>
+      <p><input type="checkbox" name="q5" id="q5F" />It bypasses limitations of the "this" keyword.</p>
 
       <p id="submitbox"><a href="#top"><button id="submit">Submit</button></a></p>
 
